fix letter block spacing

--- a/static/css.css
+++ b/static/css.css
@@ -23,7 +23,8 @@ label {
     min-width: 5em;
     margin-top: 0.2em;
     margin-bottom: 0.2em;
-    line-height: 0.9em
+    line-height: 0.9em;
+    letter-spacing: 0.05em;
 }
 
 #log {
